Updated Norwegian Bokmål.

--- a/src/i18n/_locales/nb_NO/messages.json
+++ b/src/i18n/_locales/nb_NO/messages.json
@@ -1,6 +1,6 @@
 {
     "gitHasLocalChanges": {
-      "message": "with local changes"
+      "message": "med lokale endringer"
     },
   
     "chrome_extension_name": {
